#4810 working on long formulas (bug 1: X sign disappears, bug 2: no scrollbar yet)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@39338 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/mathquillggb.css
+++ b/web/src/geogebra/resources/css/mathquillggb.css
@@ -50,10 +50,10 @@
   margin: 1px;
 }
 .hasCursorPermanent {
-	width: 100%;
+	min-width: 100%;
 	min-height: 50px;
 	line-height: 50px;
-	display: block;
+	display: inline-block;
   	border: #6161FF solid 1px;
 	background: #FFFFFF;
 	padding: 4px 5px;
